--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,16 @@ header {
     text-align: center;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+
+#calendar-button {
+    background-color: lightgray;
+    border: none;
+    width: 155px;
+    height: 45px;
+    font-size: 25px;
+    border-radius: 10px;
+}
+
+#calendar-button:hover {
+    background-color: rgb(180, 180, 180);
+}
