--- a/src/styles.css
+++ b/src/styles.css
@@ -3,7 +3,7 @@ header {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-#calendar-button {
+.nav-button {
     background-color: lightgray;
     border: none;
     width: 155px;
@@ -12,6 +12,10 @@ header {
     border-radius: 10px;
 }
 
-#calendar-button:hover {
+.nav-button:hover {
     background-color: rgb(180, 180, 180);
+}
+
+#practice-button {
+    float: right;
 }
