--- a/src/styles.css
+++ b/src/styles.css
@@ -5,6 +5,11 @@ header {
 
 a {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    text-decoration: none;
+}
+
+.nav-button {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     background-color: lightgray;
     font-size: 25px;
     text-align: center;
@@ -12,7 +17,7 @@ a {
     height: 45px;
     border: none;
     border-radius: 10px;
-    text-decoration: none;
+
 }
 
 a:hover {
