--- a/src/styles.css
+++ b/src/styles.css
@@ -1,15 +1,16 @@
-header {
-    text-align: center;
+body {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+header {
+    text-align: center;
+}
+
 a {
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     text-decoration: none;
 }
 
 .nav-button {
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     background-color: lightgray;
     font-size: 25px;
     text-align: center;
@@ -17,7 +18,6 @@ a {
     height: 45px;
     border: none;
     border-radius: 10px;
-
 }
 
 a:hover {
