--- a/src/styles.css
+++ b/src/styles.css
@@ -36,3 +36,14 @@ a:visited {
 #practice-button {
     float: right;
 }
+
+.flashcard {
+    background-color: lightgray;
+    height: 350px;
+    width: 650px;
+    border-radius: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 35px;
+}
