--- a/src/styles.css
+++ b/src/styles.css
@@ -2,6 +2,8 @@ body {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+
+/*Styling for home page*/
 header {
     text-align: center;
 }
@@ -38,7 +40,7 @@ a:visited {
 }
 
 
-
+/*Styling for flashcards*/
 .options {
     display: flex;
     width: 100%;
@@ -47,14 +49,13 @@ a:visited {
     margin-bottom: 25px;
 }
 
-.flashcards-option {
+.flashcards-option, .generate-quiz-button {
     background-color: lightgray;
     font-size: 25px;
     width: 175px;
     height: 40px;
     text-align: center;
     border-radius: 10px;
-    margin-right: 150px;
 }
 
 #quiz-topic-textbox {
@@ -62,16 +63,13 @@ a:visited {
     height: 40px;
     border-radius: 20px;
     border-width: 1px;
+    margin-right: 25px;
+    margin-left: 100px;
 }
 
 ::placeholder {
     text-align: center;
 }
-
-
-
-
-
 
 .flashcard {
     background-color: lightgray;
@@ -80,6 +78,7 @@ a:visited {
     border-radius: 40px;
     padding: 15px;
     font-size: 35px;
+    display: none;
 }
 
 #flashcard-front-text {
@@ -116,6 +115,11 @@ a:visited {
     align-items: center;
     margin-top: 100px;
 }
+
+button {
+    border: none;
+}
+
 
 
 
