--- a/src/styles.css
+++ b/src/styles.css
@@ -40,7 +40,7 @@ a:visited {
 }
 
 
-/*Styling for flashcards*/
+/*Styling for options*/
 .options {
     display: flex;
     width: 100%;
@@ -71,6 +71,12 @@ a:visited {
     text-align: center;
 }
 
+/*Styling for flashcards*/
+
+.flash-card-section {
+    display: none;
+}
+
 .flashcard {
     background-color: lightgray;
     height: 350px;
@@ -78,7 +84,6 @@ a:visited {
     border-radius: 40px;
     padding: 15px;
     font-size: 35px;
-    display: none;
 }
 
 #flashcard-front-text {
@@ -120,6 +125,22 @@ button {
     border: none;
 }
 
+#edit-flashcards-button {
+    background-color: lightgray;
+    font-size: 25px;
+    width: 200px;
+    height: 45px;
+    border-radius: 10px;
+}
+
+.edit-button-position {
+    display: flex;
+    justify-content: center;
+    margin-top: 45px;
+}
+
+
+
 /*Styling for quiz*/
 .quiz-position {
     display: flex;
@@ -133,7 +154,6 @@ button {
     grid-template-rows: repeat(5, auto);
     gap: 50px;
     display: none;
-    
 }
 
 .quiz-question {
