--- a/src/styles.css
+++ b/src/styles.css
@@ -86,6 +86,14 @@ a:visited {
     font-size: 35px;
 }
 
+.flashcard-flip-clickbox {
+    position: absolute;
+    width: 550px;
+    height: 375px;
+    top: 185px;
+    left: 685px;
+}
+
 #flashcard-front-text {
     text-align: center;
 }
