--- a/src/styles.css
+++ b/src/styles.css
@@ -2,7 +2,6 @@ body {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-
 /*Styling for home page*/
 header {
     text-align: center;
@@ -77,6 +76,11 @@ a:visited {
     display: none;
 }
 
+.flash-card-position {
+    display: flex;
+    justify-content: center;
+}
+
 .flashcard {
     background-color: lightgray;
     height: 350px;
@@ -103,16 +107,15 @@ a:visited {
     font-size: 25px;
 }
 
-.flash-card-position {
-    display: flex;
-    justify-content: center;
-}
-
 #flashcard-middle {
     display: flex;
     justify-content: space-between;
     align-items: center;
     margin-top: 100px;
+}
+
+button {
+    border: none;
 }
 
 #flashcard-middle > button {
@@ -123,8 +126,11 @@ a:visited {
     background-color: darkgray;
 }
 
-button {
-    border: none;
+/*Edit flash cards menu styling*/
+.edit-button-position {
+    display: flex;
+    justify-content: center;
+    margin-top: 45px;
 }
 
 #edit-flashcards-button {
@@ -134,14 +140,6 @@ button {
     height: 45px;
     border-radius: 10px;
 }
-
-.edit-button-position {
-    display: flex;
-    justify-content: center;
-    margin-top: 45px;
-}
-
-
 
 .edit-flashcards-menu-position {
     display: flex;
@@ -207,7 +205,3 @@ button {
     height: 250px;
     border-radius: 25px;
 }
-
-
-
-
