--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,12 @@
 body {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+
 }
+
+button:hover {
+    background-color: gray;
+}
+
 
 /*Styling for home page*/
 header {
@@ -24,6 +30,7 @@ a {
 a:hover {
     background-color: rgb(180, 180, 180);
 }
+
 
 a:visited {
     color: black;
@@ -125,14 +132,36 @@ button {
     background-color: darkgray;
 }
 
+.shuffle-flashcards-button-position {
+    display: flex;
+    justify-content: center;
+    margin-top: 25px;
+}
+
+.shuffle-flashcards-button {
+    background-color: lightgray;
+    font-size: 25px;
+    width: 125px;
+    height: 45px;
+    border-radius: 10px;
+}
+
+.shuffle-flashcards-button {
+    background-color: lightgray;
+    font-size: 25px;
+    width: 125px;
+    height: 45px;
+    border-radius: 10px;
+}
+
 /*Edit flash cards menu styling*/
 .edit-button-position {
     display: flex;
     justify-content: center;
-    margin-top: 45px;
+    margin-top: 30px;
 }
 
-#edit-flashcards-button {
+.edit-flashcards-button {
     background-color: lightgray;
     font-size: 25px;
     width: 200px;
@@ -181,6 +210,10 @@ button {
     left: 900px;
     top: 1700px;
     display: none;
+}
+
+#done-edit-button:hover {
+    background-color: green;
 }
 
 /*Styling for quiz*/
