Added hover change colour effect to left and right buttons

--- a/src/styles.css
+++ b/src/styles.css
@@ -132,6 +132,10 @@ button {
     background-color: darkgray;
 }
 
+#flashcard-middle > button:hover {
+    background-color: gray;
+}
+
 .shuffle-flashcards-button-position {
     display: flex;
     justify-content: center;
