--- a/src/styles.css
+++ b/src/styles.css
@@ -253,9 +253,34 @@ button {
 }
 
 .multiple-choice-options {
-    margin-left: 50px;
     margin-top: 25px;
+    margin-left: 10px;
+    display: flex;
+    flex-direction: column;
 }
+
+.multiple-choice-options label {
+    width: 400px;
+    border-radius: 20px;
+    
+}
+
+.multiple-choice-options label:hover {
+    background-color: rgb(192, 192, 192);    
+    
+}
+
+.multiple-choice-options input[type="radio"] {
+    display: none;  
+    
+}
+
+.multiple-choice-options input[type="radio"]:checked + label {
+    background-color: gray;
+}
+
+
+
 
 @keyframes fadeIn {
     from { 
