--- a/src/styles.css
+++ b/src/styles.css
@@ -230,7 +230,7 @@ button {
 }
 
 .quiz {
-    display: grid;
+    display: none;
     grid-template-columns: repeat(2, 600px);
     grid-template-rows: repeat(5, auto);
     gap: 50px;
@@ -331,4 +331,28 @@ button {
     to {
         opacity: 0;
     }
+}
+
+.loader-position {
+    display: flex;
+    justify-content: center;
+    margin-top: 150px;
+    position: absolute;
+    margin-left: 925px;
+}
+
+.loader {
+    border: 10px solid rgb(235, 235, 235);
+    border-radius: 50%;
+    border-top: 10px solid lightblue;
+    width: 75px;
+    height: 75px;
+    animation: spin 2s linear infinite;
+    display: none;
+
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
 }
