--- a/src/styles.css
+++ b/src/styles.css
@@ -288,7 +288,6 @@ button {
     font-weight: bold;
 }
 
-
 .quiz-submit-button {
     background-color: lightgreen;
     font-size: 30px;
@@ -314,8 +313,40 @@ button {
     justify-content: center;
 }
 
+/*For styling loading spinner*/
+.loader-position {
+    display: flex;
+    justify-content: center;
+    margin-top: 150px;
+    position: absolute;
+    margin-left: 925px;
+}
 
+.loader {
+    border: 10px solid rgb(235, 235, 235);
+    border-radius: 50%;
+    border-top: 10px solid lightblue;
+    width: 75px;
+    height: 75px;
+    animation: spin 2s linear infinite;
+    display: none;
+}
 
+/*For styling the error message*/
+.error-msg {
+    font-weight: bold;
+    font-size: 20px;
+    color: rgb(255, 0, 0);
+    position: absolute;
+    display: none;
+}
+
+.error-msg-position {
+    display: flex;
+    justify-content: center;
+}
+
+/*For animations*/
 @keyframes fadeIn {
     from { 
         opacity: 0;
@@ -336,40 +367,7 @@ button {
     }
 }
 
-.loader-position {
-    display: flex;
-    justify-content: center;
-    margin-top: 150px;
-    position: absolute;
-    margin-left: 925px;
-}
-
-.loader {
-    border: 10px solid rgb(235, 235, 235);
-    border-radius: 50%;
-    border-top: 10px solid lightblue;
-    width: 75px;
-    height: 75px;
-    animation: spin 2s linear infinite;
-    display: none;
-
-}
-
 @keyframes spin {
     0% { transform: rotate(0deg); }
     100% { transform: rotate(360deg); }
 }
-
-.error-msg {
-    font-weight: bold;
-    font-size: 20px;
-    color: rgb(255, 0, 0);
-    position: absolute;
-    display: none;
-}
-
-.error-msg-position {
-    display: flex;
-    justify-content: center;
-}
-
